🌸 `Spaces`: Prevent Add `Agreement` button from overlapping (#1461)
Fix the Add Agreement button overlapping
space.agreements.help_text on the `Spaces` `edit` page.

Warning: This change could the layout of other elements on other
pages that CSS &:last-of-type also applies too.

--- a/app/assets/stylesheets/base/typography.scss
+++ b/app/assets/stylesheets/base/typography.scss
@@ -33,7 +33,7 @@
     @apply mb-2;
 
     &:last-of-type {
-      @apply mb-0;
+      @apply mb-2;
     }
   }
 
